<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="username">Username</string>
    <string name="log_in">Log in</string>
    <string name="login_privacy_policy">Privacy Policy</string>
    <string name="login_terms_of_service">Terms of Service</string>
    <string name="read_and_agree">Agree to our %1$s and acknowledge that you have read our %2$s</string>
    <string name="app_version">App Version</string>
    <string name="sdk_version">SDK Version</string>
    <string name="content_limit">No more than %s characters with a mix of Chinese, letters &amp; numbers</string>
    <string name="change_user_name">Change your username</string>
    <string name="please_enter_user_nickname">Please enter your username</string>
    <string name="ok">OK</string>
    <string name="network_message_1011">Server data exception</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="sms_code_hint">Verification Code</string>
    <string name="get_verification_code">Get Code</string>
    <string name="resend_after_seconds">%ds</string>
    <string name="phone_number_invalid">Invalid phone number</string>
    <string name="sms_code_empty">Please enter verification code</string>
    <string name="sms_code_sent">Verification code sent</string>
</resources>