<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verify_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:ignore="ContentDescription">

    <ImageView
        android:layout_width="194dp"
        android:layout_height="60dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/verify_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/verify_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/verify_input_phone_et"
            style="@style/EditTextLg"
            android:layout_width="match_parent"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="11"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textColorHint="#86909C" />

        <View
            style="@style/DividerLine"
            android:layout_marginTop="10dp"
            android:background="#86909C" />

        <TextView
            android:id="@+id/verify_input_phone_warning_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#F65656"
            android:textSize="14sp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/verify_input_code_et"
                style="@style/EditTextLg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sms_code_hint"
                android:inputType="number"
                android:lines="1"
                android:maxLength="6"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textColorHint="#86909C" />

            <TextView
                android:id="@+id/verify_send_code_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/login_send_code_background"
                android:gravity="center"
                android:minWidth="100dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/get_verification_code"
                android:textColor="#4080FF"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            style="@style/DividerLine"
            android:layout_marginTop="10dp"
            android:background="#86909C" />

        <TextView
            android:id="@+id/verify_input_code_warning_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="#F65656"
            android:textSize="14sp"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:id="@+id/verify_policy_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="12dp"
        android:drawablePadding="12dp"
        android:gravity="center_vertical"
        android:textColor="#86909C"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/ic_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_input_layout"
        tools:text="@string/read_and_agree" />

    <TextView
        android:id="@+id/verify_confirm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_confirm_background"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verify_policy_text" />
</androidx.constraintlayout.widget.ConstraintLayout>
